Changed the ppds in the aficio2060.conf

--- a/aficio2060.conf
+++ b/aficio2060.conf
@@ -8,5 +8,4 @@ valid_groups = fsusers, newbie, inaktiv
 hook_enabled = /usr/local/sbin/fsmi-print-accounts
 
 [ppd_sync]
-ppd_files = /etc/cups/ppd/AffiDeluxeDuplex.ppd, /etc/cups/ppd/AffiDeluxe.ppd, /etc/cups/ppd/AffiDeluxeSimplex.ppd, /etc/cups/ppd/RicohAficio1075.ppd
-
+ppd_files = /etc/cups/ppd/InfoDrucker.ppd, /etc/cups/ppd/InfoDruckerAlternativ.ppd
