debian/control: declare a conflicts against aficio1075-tools
aficio2060-tools and aficio1075-tools share the same binaries, hence a
conflicts is needed to avoid co-installation.

Signed-off-by: Philipp Kern <pkern@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Package: aficio2060-tools
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python-aficio1075,
  python-reportlab, ttf-bitstream-vera, python-unidecode
+Conflicts: aficio1075-tools
 Description: Provides command-line tools to manage RICOH Aficio 2060 printers
  The tools included in this package allow the management and analysis of
  some aspects of the RICOH Aficio 2060 printers.
