--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: python-aficio2060
 Section: python
-Priority: extra
-Maintainer: Felix Maurer <felix.maurer@gmx.net>
-Uploaders: Felix Maurer <felix.maurer@gmx.net>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 3.9.1
+Priority: optional
+Maintainer: Adminis FSMI <rechner@fsmi.uni-karlsruhe.de>
+Uploaders: Jan Unterbrink <jan.unterbrink@subpath.de>
+Build-Depends: debhelper (>= 11), dh-python, python, python-all
+Standards-Version: 4.2.1
 
 Package: python-aficio2060
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}
+Depends: ${python:Depends}, ${misc:Depends}, python
 Provides: ${python:Provides}
 Description: Provides Python wrappers around RICOH Aficio 2060 functions
  The Python modules in this package provide access to various network features
@@ -18,7 +18,7 @@ Description: Provides Python wrappers around RICOH Aficio 2060 functions
 
 Package: aficio2060-tools
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python-aficio2060
+Depends: ${python:Depends}, ${misc:Depends}, python-aficio2060, python2
 Conflicts: aficio1075-tools
 Description: Provides command-line tools to manage RICOH Aficio 2060 printers
  The tools included in this package allow the management and analysis of
