--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -3,7 +3,4 @@ upstream-branch = master
 debian-branch = debian
 upstream-tag = python-aficio2060-upstream/%(version)s
 debian-tag = python-aficio2060-debian/%(version)s
-pristine-tar = True
-
-[git-buildpackage]
-export-dir = ../build-area/
+#pristine-tar = True
